Bug 419319 - Discogs and MusicBrainz fetchers do not work without user-agent
Summary: Discogs and MusicBrainz fetchers do not work without user-agent
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.2.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-03-28 00:42 UTC by Robby Stephenson
Modified: 2022-12-09 02:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Stephenson 2020-03-28 00:42:48 UTC
SUMMARY
The Discogs and MusicBrainz fetchers do not work if the KDE user-agent is turned off in system settings

https://forum.kde.org/viewtopic.php?f=200&t=165097
Comment 1 Robby Stephenson 2020-03-28 17:22:04 UTC
Git commit 9096547475c5604d0b26feb585dc9cc7e07fa866 by Robby Stephenson.
Committed on 28/03/2020 at 17:21.
Pushed by rstephenson into branch 'master'.

Allow data fetchers to determine that a user agent must be sent

If the user agent is disabled in System Settings, show a message box.
To do for later, determine whether the useragent kcm can be opened from
the message box
FIXED-IN: 3.3

M  +1    -0    src/fetch/allocinefetcher.h
M  +1    -0    src/fetch/discogsfetcher.h
M  +22   -1    src/fetch/fetcher.cpp
M  +4    -0    src/fetch/fetcher.h
M  +2    -0    src/fetch/messagehandler.cpp
M  +1    -0    src/fetch/musicbrainzfetcher.h
M  +3    -0    src/tests/crossreffetchertest.cpp

https://commits.kde.org/tellico/9096547475c5604d0b26feb585dc9cc7e07fa866
Comment 2 Robby Stephenson 2022-12-09 02:15:57 UTC
Git commit 4443f5ced0968269b7a31faf3f699598060031f8 by Robby Stephenson.
Committed on 09/12/2022 at 02:15.
Pushed by rstephenson into branch 'master'.

Remove global check for sending UserAgent in favor of job metadata

As discussed in !1030, the SlaveConfig and config option for sending
the user agent is being deprecated. Since the metadata for the job is
also used for verifying the user agent, prefer that approach.

M  +3    -1    src/fetch/allocinefetcher.cpp
M  +0    -1    src/fetch/allocinefetcher.h
M  +2    -1    src/fetch/discogsfetcher.cpp
M  +0    -1    src/fetch/discogsfetcher.h
M  +1    -21   src/fetch/fetcher.cpp
M  +0    -4    src/fetch/fetcher.h
M  +3    -1    src/fetch/musicbrainzfetcher.cpp
M  +0    -1    src/fetch/musicbrainzfetcher.h
M  +0    -3    src/tests/crossreffetchertest.cpp
M  +0    -1    src/tests/discogsfetchertest.cpp

https://invent.kde.org/office/tellico/commit/4443f5ced0968269b7a31faf3f699598060031f8