Allow data fetchers to determine that a user agent must be sent

If the user agent is disabled in System Settings, show a message box.
To do for later, determine whether the useragent kcm can be opened from
the message box

BUG: 419319
FIXED-IN: 3.3